--- a/views/html/index.html
+++ b/views/html/index.html
@@ -29,6 +29,7 @@
     <li><a href="/tags/form">&lt;s:form&gt;</a></li>
     <li><a href="/tags/form_table">&lt;s:form_table&gt;</a></li>
     <li><a href="/tags/input_box">&lt;s:input_box&gt;</a></li>
+    <li><a href="/tags/markdown">&lt;s:markdown&gt;</a></li>
     <li><a href="/tags/modal">&lt;s:modal&gt;</a></li>
     <li><a href="/tags/page_title">&lt;s:page_title&gt;</a></li>
     <li><a href="/tags/social_links">&lt;s:social_links&gt;</a></li>
