Updated dockerfile, added sanitization boolean, and s:google_analytics tag
/src/Syrus.php
    - Updated render() so auto-routing doesn't occur if template file previously set during execution.
-/tags.txt - Added [[google_analytics]] entries to necessary tags.txt files.
-src/Parser/VarContainer.php
    assign() - Added $sanitize boolean to parameter list.
    addBlock() - Added $sanitize boolean to parameter list.
- /src/Render/Templates
    Modified executePhpClass() to execute again if template file changes during execution.
config/docker/Dockerfile
    - Modified to stop permission denied errors on some servers

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -28,6 +28,7 @@
     <li><a href="/tags/data_table">&lt;s:data_table&gt;</a></li>
     <li><a href="/tags/form">&lt;s:form&gt;</a></li>
     <li><a href="/tags/form_table">&lt;s:form_table&gt;</a></li>
+    <li><a href="/tags/google_analytics">&lt;s:google_analytics&gt;</a></li>
     <li><a href="/tags/input_box">&lt;s:input_box&gt;</a></li>
     <li><a href="/tags/markdown">&lt;s:markdown&gt;</a></li>
     <li><a href="/tags/modal">&lt;s:modal&gt;</a></li>
