Added support for yield / var tags in layout pages

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -1,4 +1,4 @@
-
+<s:layout homepage>
 <h1>Welcome to Syrus!</h1>
 
 <p>Congratulations, if you're viewing this page Syrus has been successfully installed and is ready for use!  Assuming you're a front-end designer, all documentation needed is available within the /docs/designer/ directory and is linked below along with example pages of various template tags to show how they appear in the browser.</p>
