--- a/views/themes/default/layouts/homepage.html
+++ b/views/themes/default/layouts/homepage.html
@@ -1,8 +1,8 @@
 
-<s:theme include="header.html">
+<s:include header>
 
 <s:page_contents>
 
-<s:theme include="footer.html">
+<s:include footer>
 
 
